modules/gdscript/tests/scripts/analyzer/errors/getter_with_too_many_args.gd
var a: int: get = get_named

func test():
	pass

func get_named(name: int, oops: int) -> int:
	prints("get_named", name)
	return a
